third_party/move/move-compiler-v2/tests/more-v1/expansion/friend_decl_aliased_function.exp

Diagnostics:
error: unbound module
  ┌─ tests/more-v1/expansion/friend_decl_aliased_function.move:8:12
  │
8 │     friend a;
  │            ^ Unbound module alias 'a'
